[project]
name = "implied-volatility"
version = "0.1.0"
description = "Leakage-free machine-learning prediction of SPY option implied volatility"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pyarrow>=16.0",
]

[project.scripts]
ivol = "implied_volatility.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/implied_volatility"]

[tool.ruff]
line-length = 100
target-version = "py312"
# The original notebook is kept verbatim as a historical artifact (see AUDIT.md); don't lint it.
extend-exclude = ["ImpliedVolatilityPrediction.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
